--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,13 +145,9 @@ button {
   border-radius: 0;
   border: none;
 }
-
-
-
-
-
-
-
+.udpclassname {
+  text-align: center;
+}
 
 .updclass, .delclass {
   position: absolute;
@@ -176,7 +172,7 @@ button {
   padding-bottom: 100%;
   background-color: rgba(255,255,255,1.0);
 }
-.uploaddiv {
+.crepicture {
   height: 60px;
   margin: 20px 0;
 }
@@ -193,7 +189,7 @@ button {
   margin-right: 30px;
   height: 27px;
 }
-.showbox{
+.showpicture{
   position: relative;
 }
 .showitem {
