已完成 1、删除分类，被删分类下的所有图片转到默认 2、修改图片分类，不应该跳转到修改后的分类，应该刷新原有分类 待完成的地方： 图片过滤按钮事件 picturefun 做到这

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,17 @@ button {
 .btcf {
   *zoom: 1;
 }
-
+.unselectable {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  /*
+    Introduced in IE 10.
+    See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+  */
+  -ms-user-select: none;
+  user-select: none;
+}
 .all {
   max-width: 1200px;
   margin: 0 auto;
