--- a/public/stylesheets/tanchuceng.css
+++ b/public/stylesheets/tanchuceng.css
@@ -1,19 +1,60 @@
 .TCDiv{
     z-index: 101;
-    height: 300px;	width: 300px;
-    display: none;
-    background-color: #000;
-    margin-top:0;	padding:0;
+    background-color: rgba(0, 0, 0, 0.9);;
+    margin-top: 0;
+    padding: 0;
+    position: fixed;
+    top: 0; left: 100%;
+    /* background: rgba(0, 0, 0, 0.9); */
 }
 .bgDiv{
-    z-index: 100;
+    z-index: 101;
     position: fixed;
     top: 0; left: 0;
     height: 100%;	width: 100%;
+    background:rgba(0, 0, 0, 0.9);
+    border-right: 2px solid rgba(255, 255, 255, 0.9);
+}
+.TChid{
     display: none;
-    cursor: pointer;
-    background:rgba(55, 55, 55, 0.8)
+}
+.TCshow{
+    display: block !important;
 }
 .TCimg{
-    width:100%;
+    max-width: 90%;
+    max-height: 90%;
 }
+.pfend{
+    position: fixed;
+    top: 20px;
+    right: 5px;
+    width: 0;
+    height: 0;
+    border: solid;
+    border-color: rgba(255,255,255,1.0);
+    border-width: 5px 20px;
+    transform:rotate(-45deg);
+    cursor: pointer;
+}
+
+.pfend::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border: solid;
+    border-color: rgba(255,255,255,1.0);
+    border-width: 20px 5px;
+    position: absolute;
+    left: -5px;
+    top: -20px;
+}
+/*.getout::before {
+     content: "";
+     width: 0;
+     height: 0;
+     border: solid;
+     border-color: rgba(55,44,33,1.0);
+    border-width: 30px 10px;
+ }*/
+
