--- a/public/stylesheets/tanchuceng.css
+++ b/public/stylesheets/tanchuceng.css
@@ -81,10 +81,15 @@
 }
 .bigvalue{
     width: 220px;
-    background-color: rgba(255,255,255,1.0);
+    background-color: rgba(0,255,255,1.0);
     position: relative;
+    margin: 0 auto;
 }
 .smallvalue{
     width: 20px;
-    background-color: rgba(0,0,0,1.0);
+    background-color: rgba(255,0,0,1.0);
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
