--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,7 +38,7 @@ button {
 /*左侧：网站标题、图片列表*/
 .left {
   float: left;
-  width:20%;
+  width:30%;
   padding-bottom: 100%;
 
   background-color: rgba(0,0,0,1.0);
@@ -54,7 +54,7 @@ button {
 }
 .sitetitle>a {
   display: block;
-  width: 20%;
+  width: 30%;
   padding: 5px 0;
   margin: 0;
   border-bottom: 1px solid rgba(255,255,255,.2);
@@ -73,13 +73,17 @@ button {
 }
 /*newclass按钮 点击显示怎加分类的input*/
 .newclassbtn{
-  width: 75%;
+  /*width: 75%;*/
   height: 30px;
-  background-color: rgba(255,255,255,1.0);
-  color: rgba(0,0,0,1.0);
+  background-color: rgba(0,0,0,1.0);
+  color: rgba(255,255,255,1.0);
   /*border-radius: 3px;*/
-  border: 1px solid rgba(255,255,255,1.0);
+  border: 0px solid rgba(255,255,255,1.0);
   z-index: 2;
+  padding-right: 20px;
+}
+.newclassbtn i{
+  margin: 0 5px;
 }
 /*增加分类的input*/
 .hidnewclass {
@@ -87,6 +91,7 @@ button {
   z-index: 3;
   display: none;
   padding: 100%;
+  width: 80%;
 }
 /*绝对居中*/
 .abscenter {
@@ -103,15 +108,18 @@ button {
   margin: 15px 0;
   border: none;
   text-align: center;
+  width: 100%;
+  outline: none;
 }
 /*新增分类确定&取消按钮*/
 .creclassbtn, .hidcreclassbtn{
   margin: 0 10px;
   padding: 3px 10px;
-  background-color: rgba(44,48,73,1.0);
+  background-color: rgba(0,0,0,1.0);
   color: rgba(255,255,255,1.0);
   border-radius: 0;
   border: none;
+  font-size: 24px;
 }
 /*分类列表区域*/
 .showclass {
@@ -143,47 +151,51 @@ button {
 
 
 .hiduc {
-  display:none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  margin-top: 5px;
+  width: 80%;
   background-color: rgba(0,0,0,1.0);
+  z-index: 3;
+  display: none;
   padding: 100%;
 }
 .hiduc button{
-  margin: 5px 10px;
+  margin: 1px 10px;
   padding: 3px 10px;
-  background-color: rgba(44,48,73,1.0);
+  background-color: rgba(0,0,0,1.0);
   color: rgba(255,255,255,1.0);
   border-radius: 0;
   border: none;
+  font-size: 20px;
 }
 .udpclassname {
   text-align: center;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  padding: 3px;
 }
 
 .updclass, .delclass {
   position: absolute;
+  padding: 0;
+  background-color: transparent;
+  left: 100%;
+  top: 50%;
+  top: 50%;
+  border: 0 solid gray;
+  font-size: 22px;
+  margin-left: -25px;
 }
 .updclass {
-  left: 100%;
-  top: 50%;
-  margin-left: -51px;
-  margin-top: -12px;
+  margin-top: -25px;
 }
 .delclass {
-  left: 100%;
-  top: 50%;
-  margin-left: -24px;
-  margin-top: -12px;
+
+  margin-top: 5px;
 }
 
-
 .right {
-  width: 80%;
+  width: 70%;
   float: right;
   padding-bottom: 100%;
   background-color: rgba(255,255,255,1.0);
