--- a/public/stylesheets/tanchuceng.css
+++ b/public/stylesheets/tanchuceng.css
@@ -22,6 +22,7 @@
     display: block !important;
 }
 .TCimg{
+    /*border: 1px solid white;*/
     max-width: 90%;
     max-height: 90%;
 }
@@ -114,4 +115,11 @@
 }
 .thisfilter {
     background-color: rgba(245,222,179,1.0) !important;
+}
+canvas {
+   /* padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;*/
 }
