--- a/public/stylesheets/tanchuceng.css
+++ b/public/stylesheets/tanchuceng.css
@@ -54,6 +54,7 @@
     /*border: 1px solid white;*/
     max-width: 90%;
     max-height: 90%;
+    transform:rotate(0deg);
 }
 .pfend{
     position: fixed;
